@@ -1,5 +1,8 @@
 DFHack future
 
+    Fixes:
+        - autotrade: "Mark all" no longer double-marks bin contents
+
 DFHack 0.40.13-r1
     Internals:
         - unified spatter structs
